添加热更新

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">guer</string>
+    <string moduleConfig="true" name="CodePushDeploymentKey">w2ixDpVU_44n-kzQxDa2D4xtQyLRBQWoDYaIV</string>
+    <string name="CodePushPublicKey">-----BEGIN PUBLIC KEY-----
+E22JN21qlxac25EkjsCNFJougYeeqYm9w-FX5
+-----END PUBLIC KEY-----</string>
 </resources>
